--- a/index.html
+++ b/index.html
@@ -82,9 +82,10 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero">
     <div class="hero-container" data-aos="zoom-in" data-aos-delay="100">
-      <img src="assets/img/trisklogo.png">
+      <!-- <img src="assets/img/trisklogo.png"> -->
       <!--<h2>We are team of talented designers making websites with Bootstrap</h2>
       <a href="#about" class="btn-get-started">Get Started</a>-->
+      <p class="trisk">TRISKELION <span class="siz"><br>2.0</span></p>
       <div class="countdown">
 
         <div class="time-area">
@@ -109,7 +110,7 @@
   <main id="main">
     <!-- ======= Prizes ======= -->
     <section id="prizes" class="prizes">
-      <div class="container">
+      <div class="container flex_g1">
 
         <div class="section-title">
           <span>Prizes</span>
@@ -121,30 +122,61 @@
         <div class="container bootstrap snippets bootdeys">
           <div class="row">
             <div class="col-md-4 col-sm-6 content-card">
-              <div class="card-big-shadow">
-                <div class="card card-just-text" data-background="color" data-color="green" data-radius="none">
-                  <div class="content">
-                    <!--<h6 class="category">Best cards</h6>-->
-                    <h4 class="title"><a href="#">COMING SOON!!!</a></h4>
-                    <!--<p class="description">What all of these have in common is that they're pulling information out of the app or the service and making it relevant to the moment. </p>-->
-                  </div>
-                </div> <!-- end card -->
-              </div>
+              <!-- <div class="card-big-shadow"> -->
+              <div class="card card-just-text" data-background="color" data-color="green" data-radius="none">
+                <div class="content">
+                  <!--<h6 class="category">Best cards</h6>-->
+                  <h4 class="title"><a href="#">COMING SOON!!!</a></h4>
+                  <!--<p class="description">What all of these have in common is that they're pulling information out of the app or the service and making it relevant to the moment. </p>-->
+                </div>
+              </div> <!-- end card -->
+              <!-- </div> -->
             </div>
           </div>
         </div>
 
+        <div class="container bootstrap snippets bootdeys">
+          <div class="row">
+            <div class="col-md-4 col-sm-6 content-card">
+              <!-- <div class="card-big-shadow"> -->
+              <div class="card card-just-text" data-background="color" data-color="green" data-radius="none">
+                <div class="content">
+                  <!--<h6 class="category">Best cards</h6>-->
+                  <h4 class="title"><a href="#">COMING SOON!!!</a></h4>
+                  <!--<p class="description">What all of these have in common is that they're pulling information out of the app or the service and making it relevant to the moment. </p>-->
+                </div>
+              </div> <!-- end card -->
+              <!-- </div> -->
+            </div>
+          </div>
+        </div>
+
+        <div class="container bootstrap snippets bootdeys">
+          <div class="row">
+            <div class="col-md-4 col-sm-6 content-card">
+              <!-- <div class="card-big-shadow"> -->
+              <div class="card card-just-text" data-background="color" data-color="green" data-radius="none">
+                <div class="content">
+                  <!--<h6 class="category">Best cards</h6>-->
+                  <h4 class="title"><a href="#">COMING SOON!!!</a></h4>
+                  <!--<p class="description">What all of these have in common is that they're pulling information out of the app or the service and making it relevant to the moment. </p>-->
+                </div>
+              </div> <!-- end card -->
+              <!-- </div> -->
+            </div>
+          </div>
+        </div>
 
       </div>
     </section><!-- End #prizes -->
 
     <!-- ======= Judges ======= -->
     <section id="judges">
-      <div class="container">
+      <div class="container flex_g2">
 
         <div class="section-title">
           <span>Judges</span>
-          <h2>Judges</h2>
+          <!-- <h2>Judges</h2> -->
           <p></p>
         </div>
 
@@ -152,15 +184,49 @@
         <div class="container bootstrap snippets bootdeys">
           <div class="row">
             <div class="col-md-4 col-sm-6 content-card">
-              <div class="card-big-shadow">
-                <div class="card card-just-text" data-background="color" data-color="green" data-radius="none">
-                  <div class="content">
-                    <!--<h6 class="category">Best cards</h6>-->
-                    <h4 class="title"><a href="#">COMING SOON!!!</a></h4>
-                    <!--<p class="description">What all of these have in common is that they're pulling information out of the app or the service and making it relevant to the moment. </p>-->
-                  </div>
-                </div> <!-- end card -->
-              </div>
+              <!-- <div class="card-big-shadow"> -->
+              <div class="card card-just-text" data-background="color" data-color="green" data-radius="none">
+                <div class="content">
+                  <!--<h6 class="category">Best cards</h6>-->
+                  <h4 class="title"><a href="#">COMING SOON!!!</a></h4>
+                  <!--<p class="description">What all of these have in common is that they're pulling information out of the app or the service and making it relevant to the moment. </p>-->
+                </div>
+              </div> <!-- end card -->
+              <!-- </div> -->
+            </div>
+          </div>
+        </div>
+
+
+        <div class="container bootstrap snippets bootdeys">
+          <div class="row">
+            <div class="col-md-4 col-sm-6 content-card">
+              <!-- <div class="card-big-shadow"> -->
+              <div class="card card-just-text" data-background="color" data-color="green" data-radius="none">
+                <div class="content">
+                  <!--<h6 class="category">Best cards</h6>-->
+                  <h4 class="title"><a href="#">COMING SOON!!!</a></h4>
+                  <!--<p class="description">What all of these have in common is that they're pulling information out of the app or the service and making it relevant to the moment. </p>-->
+                </div>
+              </div> <!-- end card -->
+              <!-- </div> -->
+            </div>
+          </div>
+        </div>
+
+
+        <div class="container bootstrap snippets bootdeys">
+          <div class="row">
+            <div class="col-md-4 col-sm-6 content-card">
+              <!-- <div class="card-big-shadow"> -->
+              <div class="card card-just-text" data-background="color" data-color="green" data-radius="none">
+                <div class="content">
+                  <!--<h6 class="category">Best cards</h6>-->
+                  <h4 class="title"><a href="#">COMING SOON!!!</a></h4>
+                  <!--<p class="description">What all of these have in common is that they're pulling information out of the app or the service and making it relevant to the moment. </p>-->
+                </div>
+              </div> <!-- end card -->
+              <!-- </div> -->
             </div>
           </div>
         </div>
@@ -170,11 +236,11 @@
     </section><!-- End #judges -->
     <!-- ======= sponsors ======= -->
     <section id="sponsors">
-      <div class="container">
+      <div class="container flex_g3">
 
         <div class="section-title">
           <span>Sponsors</span>
-          <h2>Sponsors</h2>
+          <!-- <h2>Sponsors</h2> -->
           <p></p>
         </div>
 
@@ -182,18 +248,54 @@
         <div class="container bootstrap snippets bootdeys">
           <div class="row">
             <div class="col-md-4 col-sm-6 content-card">
-              <div class="card-big-shadow">
-                <div class="card card-just-text" data-background="color" data-color="green" data-radius="none">
-                  <div class="content">
-                    <!--<h6 class="category">Best cards</h6>-->
-                    <h4 class="title"><a href="#">COMING SOON!!!</a></h4>
-                    <!--<p class="description">What all of these have in common is that they're pulling information out of the app or the service and making it relevant to the moment. </p>-->
-                  </div>
-                </div> <!-- end card -->
-              </div>
+              <!-- <div class="card-big-shadow"> -->
+              <div class="card card-just-text" data-background="color" data-color="green" data-radius="none">
+                <div class="content">
+                  <!--<h6 class="category">Best cards</h6>-->
+                  <h4 class="title"><a href="#">COMING SOON!!!</a></h4>
+                  <!--<p class="description">What all of these have in common is that they're pulling information out of the app or the service and making it relevant to the moment. </p>-->
+                </div>
+              </div> <!-- end card -->
+              <!-- </div> -->
             </div>
           </div>
         </div>
+
+        <div class="container bootstrap snippets bootdeys">
+          <div class="row">
+            <div class="col-md-4 col-sm-6 content-card">
+              <!-- <div class="card-big-shadow"> -->
+              <div class="card card-just-text" data-background="color" data-color="green" data-radius="none">
+                <div class="content">
+                  <!--<h6 class="category">Best cards</h6>-->
+                  <h4 class="title"><a href="#">COMING SOON!!!</a></h4>
+                  <!--<p class="description">What all of these have in common is that they're pulling information out of the app or the service and making it relevant to the moment. </p>-->
+                </div>
+              </div> <!-- end card -->
+              <!-- </div> -->
+            </div>
+          </div>
+        </div>
+
+        <div class="container bootstrap snippets bootdeys">
+          <div class="row">
+            <div class="col-md-4 col-sm-6 content-card">
+              <!-- <div class="card-big-shadow"> -->
+              <div class="card card-just-text" data-background="color" data-color="green" data-radius="none">
+                <div class="content">
+                  <!--<h6 class="category">Best cards</h6>-->
+                  <h4 class="title"><a href="#">COMING SOON!!!</a></h4>
+                  <!--<p class="description">What all of these have in common is that they're pulling information out of the app or the service and making it relevant to the moment. </p>-->
+                </div>
+              </div> <!-- end card -->
+              <!-- </div> -->
+            </div>
+          </div>
+        </div>
+
+
+
+
 
 
       </div>
