added about section

--- a/index.html
+++ b/index.html
@@ -107,6 +107,26 @@
     </div>
   </section><!-- End Hero Section -->
 
+  <!-- Start of ABOUT section -->
+
+  <section>
+
+    <div class="abt">ABOUT</div>
+
+    <div class="flex-align">
+
+      <p class="about">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis recusandae eum voluptate
+        non quaerat nam doloremque illo laudantium sequi. Similique eius dolores quibusdam quam ut vel, non ducimus!
+        Fugit quae, alias officia quisquam natus eveniet placeat optio sed in atque pariatur, voluptates reprehenderit
+        quas saepe quibusdam error maxime recusandae nihil!</p>
+      <img src="assets/img/5278.png" class="abt-img">
+
+    </div>
+
+  </section>
+
+  <!-- End of ABOUT Section -->
+
   <main id="main">
     <!-- ======= Prizes ======= -->
     <section id="prizes" class="prizes">
