--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-          <li><a class="nav-link scrollto" href="#about">About</a></li>
+          <li><a class="nav-link scrollto" href="#abt">About</a></li>
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
           <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
           <li><a class="nav-link scrollto" href="#team">Team</a></li>
@@ -111,7 +111,7 @@
 
   <section>
 
-    <div class="abt">ABOUT</div>
+    <div class="abt" id="abt">ABOUT</div>
 
     <div class="flex-align">
 
