--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#abt">About</a></li>
-          <li><a class="nav-link scrollto" href="#services">Services</a></li>
-          <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
-          <li><a class="nav-link scrollto" href="#team">Team</a></li>
+          <li><a class="nav-link scrollto" href="#services">Prizes</a></li>
+          <li><a class="nav-link scrollto " href="#portfolio">Judges</a></li>
+          <li><a class="nav-link scrollto" href="#team">Sponsors</a></li>
           <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
@@ -89,18 +89,24 @@
       <div class="countdown">
 
         <div class="time-area">
-          <div class="time">00</div>
+          <div class="countdown1">
+          <div class="time"></div>
+          </div>
           <div class="type_g">Days</div>
         </div>
 
         <div class="time-area1">
-          <div class="time">00</div>
+          <div class="countdown2">
+          <div class="time"></div>
           <div class="type_g">Hours</div>
+          </div>
         </div>
 
         <div class="time-area2">
-          <div class="time">00</div>
+          <div class="countdown3">
+          <div class="time"></div>
           <div class="type_g">Minutes</div>
+          </div>
         </div>
 
       </div>
