--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#abt">About</a></li>
-          <li><a class="nav-link scrollto" href="#services">Prizes</a></li>
-          <li><a class="nav-link scrollto " href="#portfolio">Judges</a></li>
-          <li><a class="nav-link scrollto" href="#team">Sponsors</a></li>
+          <li><a class="nav-link scrollto" href="#prizes">Prizes</a></li>
+          <li><a class="nav-link scrollto " href="#judges">Judges</a></li>
+          <li><a class="nav-link scrollto" href="#sponsors">Sponsors</a></li>
           <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
@@ -72,7 +72,7 @@
               <li><a href="#">Drop Down 4</a></li>
             </ul>
           </li>
-          <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+          <li><a class="nav-link scrollto" href="#footer">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -92,20 +92,20 @@
           <div class="countdown1">
           <div class="time"></div>
           </div>
-          <div class="type_g">Days</div>
+          <div class="type_g">Hours</div>
         </div>
 
         <div class="time-area1">
           <div class="countdown2">
           <div class="time"></div>
-          <div class="type_g">Hours</div>
+          <div class="type_g">Minutes</div>
           </div>
         </div>
 
         <div class="time-area2">
           <div class="countdown3">
           <div class="time"></div>
-          <div class="type_g">Minutes</div>
+          <div class="type_g">Seconds</div>
           </div>
         </div>
 
