--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <li><a class="nav-link scrollto" href="#prizes">Prizes</a></li>
           <li><a class="nav-link scrollto " href="#judges">Judges</a></li>
           <li><a class="nav-link scrollto" href="#sponsors">Sponsors</a></li>
-          <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
+          <!--<li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
               <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
@@ -74,7 +74,7 @@
           </li>
           <li><a class="nav-link scrollto" href="#footer">Contact</a></li>
         </ul>
-        <i class="bi bi-list mobile-nav-toggle"></i>
+        <i class="bi bi-list mobile-nav-toggle"></i>-->
       </nav><!-- .navbar -->
     </div>
   </header><!-- End Header -->
