--- a/index.html
+++ b/index.html
@@ -82,9 +82,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero">
     <div class="hero-container" data-aos="zoom-in" data-aos-delay="100">
-      <!-- <img src="assets/img/trisklogo.png"> -->
-      <!--<h2>We are team of talented designers making websites with Bootstrap</h2>
-      <a href="#about" class="btn-get-started">Get Started</a>-->
+
       <p class="trisk">TRISKELION <span class="siz"><br>2.0</span></p>
       <div class="countdown">
 
@@ -149,7 +147,7 @@
           <div class="row">
             <div class="col-md-4 col-sm-6 content-card">
               <!-- <div class="card-big-shadow"> -->
-              <div class="card card-just-text" data-background="color" data-color="green" data-radius="none">
+              <div class="card card-just-text" data-background="color" data-color="green" data-radius="10">
                 <div class="content">
                   <!--<h6 class="category">Best cards</h6>-->
                   <h4 class="title"><a href="#">COMING SOON!!!</a></h4>
@@ -165,7 +163,7 @@
           <div class="row">
             <div class="col-md-4 col-sm-6 content-card">
               <!-- <div class="card-big-shadow"> -->
-              <div class="card card-just-text" data-background="color" data-color="green" data-radius="none">
+              <div class="card card-just-text" data-background="color" data-color="green" data-radius="10">
                 <div class="content">
                   <!--<h6 class="category">Best cards</h6>-->
                   <h4 class="title"><a href="#">COMING SOON!!!</a></h4>
@@ -181,7 +179,7 @@
           <div class="row">
             <div class="col-md-4 col-sm-6 content-card">
               <!-- <div class="card-big-shadow"> -->
-              <div class="card card-just-text" data-background="color" data-color="green" data-radius="none">
+              <div class="card card-just-text" data-background="color" data-color="green" data-radius= "10">
                 <div class="content">
                   <!--<h6 class="category">Best cards</h6>-->
                   <h4 class="title"><a href="#">COMING SOON!!!</a></h4>
@@ -211,7 +209,7 @@
           <div class="row">
             <div class="col-md-4 col-sm-6 content-card">
               <!-- <div class="card-big-shadow"> -->
-              <div class="card card-just-text" data-background="color" data-color="green" data-radius="none">
+              <div class="card card-just-text" data-background="color" data-color="green" data-radius="10">
                 <div class="content">
                   <!--<h6 class="category">Best cards</h6>-->
                   <h4 class="title"><a href="#">COMING SOON!!!</a></h4>
@@ -228,7 +226,7 @@
           <div class="row">
             <div class="col-md-4 col-sm-6 content-card">
               <!-- <div class="card-big-shadow"> -->
-              <div class="card card-just-text" data-background="color" data-color="green" data-radius="none">
+              <div class="card card-just-text" data-background="color" data-color="green" data-radius="10">
                 <div class="content">
                   <!--<h6 class="category">Best cards</h6>-->
                   <h4 class="title"><a href="#">COMING SOON!!!</a></h4>
@@ -245,7 +243,7 @@
           <div class="row">
             <div class="col-md-4 col-sm-6 content-card">
               <!-- <div class="card-big-shadow"> -->
-              <div class="card card-just-text" data-background="color" data-color="green" data-radius="none">
+              <div class="card card-just-text" data-background="color" data-color="green" data-radius="10">
                 <div class="content">
                   <!--<h6 class="category">Best cards</h6>-->
                   <h4 class="title"><a href="#">COMING SOON!!!</a></h4>
@@ -275,7 +273,7 @@
           <div class="row">
             <div class="col-md-4 col-sm-6 content-card">
               <!-- <div class="card-big-shadow"> -->
-              <div class="card card-just-text" data-background="color" data-color="green" data-radius="none">
+              <div class="card card-just-text" data-background="color" data-color="green" data-radius="10">
                 <div class="content">
                   <!--<h6 class="category">Best cards</h6>-->
                   <h4 class="title"><a href="#">COMING SOON!!!</a></h4>
@@ -291,7 +289,7 @@
           <div class="row">
             <div class="col-md-4 col-sm-6 content-card">
               <!-- <div class="card-big-shadow"> -->
-              <div class="card card-just-text" data-background="color" data-color="green" data-radius="none">
+              <div class="card card-just-text" data-background="color" data-color="green" data-radius="10">
                 <div class="content">
                   <!--<h6 class="category">Best cards</h6>-->
                   <h4 class="title"><a href="#">COMING SOON!!!</a></h4>
@@ -307,7 +305,7 @@
           <div class="row">
             <div class="col-md-4 col-sm-6 content-card">
               <!-- <div class="card-big-shadow"> -->
-              <div class="card card-just-text" data-background="color" data-color="green" data-radius="none">
+              <div class="card card-just-text" data-background="color" data-color="green" data-radius="10">
                 <div class="content">
                   <!--<h6 class="category">Best cards</h6>-->
                   <h4 class="title"><a href="#">COMING SOON!!!</a></h4>
