--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/netx logo-02.png" rel="icon">
+  <link href="assets/img/netx logo-02.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Poppins:300,400,500,700"
@@ -27,6 +27,9 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
+
+  <!-- Counter Javascript -->
+  <script href="assets/js/counter.js" rel="stylesheet"></script>
 
   <!-- =======================================================
   * Template Name: Regna - v4.7.0
@@ -87,24 +90,24 @@
       <div class="countdown">
 
         <div class="time-area">
-          <div class="countdown1">
-          <div class="time"></div>
+          <div class="time">
+            <div class="countdown1"></div>
           </div>
           <div class="type_g">Hours</div>
         </div>
 
         <div class="time-area1">
-          <div class="countdown2">
-          <div class="time"></div>
-          <div class="type_g">Minutes</div>
+          <div class="time">
+            <div class="countdown2"></div>
           </div>
+          <div class="type_g">Minutes</div>
         </div>
 
         <div class="time-area2">
-          <div class="countdown3">
-          <div class="time"></div>
-          <div class="type_g">Seconds</div>
+          <div class="time">
+            <div class="countdown3"></div>
           </div>
+          <div class="type_g">Seconds</div>
         </div>
 
       </div>
@@ -119,10 +122,12 @@
 
     <div class="flex-align">
 
-      <p class="about">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis recusandae eum voluptate
-        non quaerat nam doloremque illo laudantium sequi. Similique eius dolores quibusdam quam ut vel, non ducimus!
-        Fugit quae, alias officia quisquam natus eveniet placeat optio sed in atque pariatur, voluptates reprehenderit
-        quas saepe quibusdam error maxime recusandae nihil!</p>
+      <p class="about">
+        "Event organization from the cradle to the grave."<br>
+        <br>
+        NetX's flagship event, Triskelion, is all about the life cycle of an event - from planning to its successful organization. The main focus is on helping participants explore and experience everything that happens behind the scenes of an event. 
+        <br>
+        It is not just a convenient and unconventional way to learn organization and communication skills. But also an opportunity to interact and network with young minds, reflecting NetX's motto of learning through sharing.</p>
       <img src="assets/img/5278.png" class="abt-img">
 
     </div>
