--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
               <li><a href="#">Drop Down 3</a></li>
               <li><a href="#">Drop Down 4</a></li>
             </ul>
-          </li>
+          </li>-->
           <li><a class="nav-link scrollto" href="#footer">Contact</a></li>
         </ul>
-        <i class="bi bi-list mobile-nav-toggle"></i>-->
+        <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
     </div>
   </header><!-- End Header -->
@@ -88,6 +88,12 @@
 
       <p class="trisk">TRISKELION <span class="siz"><br>2.0</span></p>
       <div class="countdown">
+
+        <!--<div id="countdownpanel">
+          <div id ="countdown1"></div>
+          <div id ="countdown2"></div>
+          <div id ="countdown3"></div>
+        </div>-->
 
         <div class="time-area">
           <div class="time">
