--- a/index.html
+++ b/index.html
@@ -89,13 +89,15 @@
       <p class="trisk">TRISKELION <span class="siz"><br>2.0</span></p>
       <div class="countdown">
 
-        <!--<div id="countdownpanel">
+        <div id="timer"></div>
+
+        <!-- <div id="countdownpanel">
           <div id ="countdown1"></div>
           <div id ="countdown2"></div>
           <div id ="countdown3"></div>
-        </div>-->
+        </div> -->
 
-        <div class="time-area">
+        <!-- <div class="time-area">
           <div class="time">
             <div class="countdown1"></div>
           </div>
@@ -114,7 +116,7 @@
             <div class="countdown3"></div>
           </div>
           <div class="type_g">Seconds</div>
-        </div>
+        </div> -->
 
       </div>
     </div>
