added register button

--- a/index.html
+++ b/index.html
@@ -201,6 +201,11 @@
         </div>
 
       </div>
+
+      <div class="register" id="register">
+        Register Now
+      </div>
+
     </section><!-- End #prizes -->
 
     <!-- ======= Judges ======= -->
