--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <link href="assets/css/style.css" rel="stylesheet">
 
   <!-- Counter Javascript -->
-  <script src="assets/js/counter.js" ></script>
+  <script src="assets/js/counter.js"></script>
   <link href="assets/css/counter.css" rel="stylesheet">
 
   <!-- =======================================================
@@ -59,6 +59,7 @@
           <li><a class="nav-link scrollto" href="#prizes">Prizes</a></li>
           <li><a class="nav-link scrollto " href="#judges">Judges</a></li>
           <li><a class="nav-link scrollto" href="#sponsors">Sponsors</a></li>
+          <li><a class="nav-link scrollto" href="#register">Register</a></li>
           <!--<li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
@@ -209,9 +210,11 @@
 
       </div>
 
-      <div class="register" id="register">
-        Register Now
-      </div>
+      <a href="#" target="_blank">
+        <div class="register" id="register">
+          Register Now
+        </div>
+      </a>
 
     </section><!-- End #prizes -->
 
