--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
           </div>
 
           <a href="#" target="_blank">
-            <div class="register" id="register">
+            <div class="register text-center" id="register">
               Register Now
             </div>
           </a>
