--- a/index.html
+++ b/index.html
@@ -330,8 +330,8 @@
       <h3>Contact Us</h3>
 
       <div class="flex">
-        <div><i class="bi bi-whatsapp"></i>&ensp;Name1</div>
-        <div><i class="bi bi-whatsapp"></i>&ensp;Name2</div>
+        <div><strong><a href="https://wa.me/916238894332"><i class="bi bi-whatsapp"></i>&ensp;Parvati Sreekumar</a></strong></div>
+        <div><strong><a href="https://wa.me/916238458423"><i class="bi bi-whatsapp"></i>&ensp;Akhina George</a></strong></div>
       </div>
 
       <div class="social-links">
