--- a/index.html
+++ b/index.html
@@ -32,12 +32,7 @@
   <script src="assets/js/counter.js"></script>
   <link href="assets/css/counter.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: Regna - v4.7.0
-  * Template URL: https://bootstrapmade.com/regna-bootstrap-onepage-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
+  
 </head>
 
 <body>
@@ -202,14 +197,19 @@
 
           </div>
 
-          <a href="#" target="_blank">
-            <div class="register text-center" id="register">
-              Register Now
-            </div>
-          </a>
-
 
     </section><!-- End #prizes -->
+ <!-- ======= reg Section ======= -->
+    <section id="reg" class="reg">
+      <div class="container">
+
+        <div class="text-center">
+          
+          <a class="reg-btn" href="#">Register Now</a>
+        </div>
+
+      </div>
+    </section><!-- End reg Section -->
 
     <!-- ======= Judges ======= -->
     <section id="judges">
