--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <script src="assets/js/counter.js"></script>
   <link href="assets/css/counter.css" rel="stylesheet">
 
-  
+
 </head>
 
 <body>
@@ -199,13 +199,13 @@
 
 
     </section><!-- End #prizes -->
- <!-- ======= reg Section ======= -->
+    <!-- ======= reg Section ======= -->
     <section id="reg" class="reg">
       <div class="container">
 
-        <div class="text-center">
-          
-          <a class="reg-btn" href="#">Register Now</a>
+        <div class="text-center ">
+
+          <a class="reg-btn register" href="#">Register Now</a>
         </div>
 
       </div>
@@ -330,8 +330,10 @@
       <h3>Contact Us</h3>
 
       <div class="flex">
-        <div><strong><a href="https://wa.me/916238894332"><i class="bi bi-whatsapp"></i>&ensp;Parvati Sreekumar</a></strong></div>
-        <div><strong><a href="https://wa.me/916238458423"><i class="bi bi-whatsapp"></i>&ensp;Akhina George</a></strong></div>
+        <div><strong><a href="https://wa.me/916238894332"><i class="bi bi-whatsapp"></i>&ensp;Parvati
+              Sreekumar</a></strong></div>
+        <div><strong><a href="https://wa.me/916238458423"><i class="bi bi-whatsapp"></i>&ensp;Akhina George</a></strong>
+        </div>
       </div>
 
       <div class="social-links">
