--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 
         <div class="text-center ">
 
-          <a class="reg-btn register" href="#">Register Now</a>
+          <a class="reg-btn register" href="reg.html">Register Now</a>
         </div>
 
       </div>
