--- a/reg.html
+++ b/reg.html
@@ -79,7 +79,7 @@
                     </div>
 
                     <div>
-                        <button class="btn btn-primary me-2" type="submit">REGISTER</button>
+                        <a href="#"><button class="btn btn-primary me-2" type="submit">REGISTER</button></a>
                         <button class="btn btn-danger" type="reset">Reset the form!</button>
                     </div>
 
