--- a/reg.html
+++ b/reg.html
@@ -98,15 +98,15 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
     <script>
-        /*google sheet maattanam marakkaruthu......*/
+        
         const scriptURL = 'https://script.google.com/macros/s/AKfycbzI2lkAK66sn_DMY2jqpRg-20pQaEOYKHffSOR2hIA8PN9BttpdzVgLrbOvp7u1PThH/exec'
         const form = document.forms['google-sheet']
 
         form.addEventListener('submit', e => {
             e.preventDefault()
             fetch(scriptURL, { method: 'POST', body: new FormData(form)})
-            .then(response => $("#form_alerts").html("<div class='alert alert-success' style='position:bottom'>Contact message sent successfully.</div>"))
-            .catch(error => $("#form_alerts").html("<div class='alert alert-danger'>Contact message not sent.</div>"))
+            .then(response => $("#form_alerts").html("<div class='alert alert-success'>Registered successfully.</div>"))
+            .catch(error => $("#form_alerts").html("<div class='alert alert-danger'>Registration not complete.</div>"))
         })
     </script>
 </body>
