--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <li><a class="nav-link scrollto" href="#prizes">Prizes</a></li>
           <li><a class="nav-link scrollto " href="#judges">Judges</a></li>
           <li><a class="nav-link scrollto" href="#sponsors">Sponsors</a></li>
-          <li><a class="nav-link scrollto" href="#register">Register</a></li>
+          <li><a class="nav-link scrollto" href="#reg">Register</a></li>
           <!--<li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
