--- a/index.html
+++ b/index.html
@@ -83,9 +83,37 @@
   <section id="hero">
     <div class="hero-container" data-aos="zoom-in" data-aos-delay="100">
 
-      <p class="trisk">TRISKELION <span class="siz"><br>2.0</span></p>
+      <p class="trisk">TRISKELION <br><br class="extra"><span class="siz">2.0</span></p>
       <div id="timer_d"></div>
-      
+      <!-- <div class="countdown">
+        <div id="countdownpanel">
+          <div id ="countdown1"></div>
+          <div id ="countdown2"></div>
+          <div id ="countdown3"></div>
+        </div> 
+
+        <div class="time-area">
+          <div class="time">
+            <div class="countdown1"></div>
+          </div>
+          <div class="type_g">Hours</div>
+        </div>
+
+        <div class="time-area1">
+          <div class="time">
+            <div class="countdown2"></div>
+          </div>
+          <div class="type_g">Minutes</div>
+        </div>
+
+        <div class="time-area2">
+          <div class="time">
+            <div class="countdown3"></div>
+          </div>
+          <div class="type_g">Seconds</div>
+        </div>
+
+      </div>   -->
     </div>
   </section><!-- End Hero Section -->
 
@@ -171,17 +199,21 @@
 
 
     </section><!-- End #prizes -->
+
     <!-- ======= reg Section ======= -->
     <section id="reg" class="reg">
       <div class="container">
 
         <div class="text-center ">
 
-          <a class="reg-btn register" href="reg.html">Register Now</a>
+          <a class="reg-btn register"><button class="bubbly-button"
+              onclick="setTimeout(() => { window.location.href='reg.html' }, 800);">REGISTER
+              NOW</button></a>
         </div>
 
       </div>
     </section><!-- End reg Section -->
+
 
     <!-- ======= Judges ======= -->
     <section id="judges">
@@ -302,9 +334,10 @@
       <h3>Contact Us</h3>
 
       <div class="flex">
-        <div><strong><a href="https://wa.me/916238894332"><i class="bi bi-whatsapp"></i>&ensp;Parvati
+        <div><strong><a href="https://wa.me/916238894332" id="transformin"><i class="bi bi-whatsapp"></i>&ensp;Parvati
               Sreekumar</a></strong></div>
-        <div><strong><a href="https://wa.me/916238458423"><i class="bi bi-whatsapp"></i>&ensp;Akhina George</a></strong>
+        <div><strong><a href="https://wa.me/916238458423" id="transformin"><i class="bi bi-whatsapp"></i>&ensp;Akhina
+              George</a></strong>
         </div>
       </div>
 
